# RWKV-Server

./: .gitignore  .gitmodules  README.md  a.txt  aaa.py  few_shot.txt  main.py  pyproject.toml  readme  run.py  rwkv_sessions.db  sample_test.py  sampling.cu.cpp  test.py  teste.py  text.txt
server/: __init__.py  api.py  config.py  eof_v20230424.txt  logger.py  logging.py  task.py  utils.py
server/api/: app.py  dependencies.py  schemas.py  task_manager.py
server/api/routes/: openai.py  tasks.py
server/api/routes/v1/: __init__.py
server/api/routes/v1/openai/: routers.py  schemas.py  utils.py
server/api/routes/v1/rwkv/: routers.py  schemas.py
server/pipeline/: __init__.py  batch_engine.py  loader.py  manager_base.py  manager_double.py  manager_dynamic.py  manager_simple.py  patch.py  pipeline.py  pipeline_r copy.py  sampler.py
server/reference/: __init__.py  model_wrapper.py
server/scheduler/: __init__.py  batch_engine.py  loader.py  manager_base.py  manager_dynamic.py  manager_simple.py  scheduler_base.py  scheduler_dynamic.py  scheduler_simple.py  task.py
server/task/: __init__.py  manager.py  task.py
test/: batch_async.py  batch_sync.py  conftest.py  locustfile.py  test_api.py  test_concurrent.py  test_fim.py  test_health.py  test_openai.py  test_task.py
