[project]
name = "rwkv-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "black>=26.3.1",
    "colorama>=0.4.6",
    "fastapi[all]>=0.136.1",
    "flashinfer-python>=0.6.7",
    "locust>=2.44.1",
    "loguru>=0.7.3",
    "ninja>=1.13.0",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "robyn>=0.82.1",
    "rwkv>=0.8.32",
    "tabulate>=0.10.0",
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
